更新pom.xml以设置UTF-8编码，并添加maven-compiler-plugin和maven-surefire-plugin配置；修正ElasticsearchTableStructureExtractor.java中的MappingMetaData为MappingMetadata以适应Elasticsearch API变更。

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,10 @@
 
         <maven.version.range>[3.0.4,)</maven.version.range>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.locale>zh_CN</project.build.locale>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <file.encoding>UTF-8</file.encoding>
 
         <spring-boot.version>2.7.18</spring-boot.version>
     </properties>
@@ -48,5 +51,32 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>-Dfile.encoding=UTF-8</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
