--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 
     <modules>
         <module>hds-schema-compare</module>
+        <module>hds-schema-compare-example</module>
+        <module>hds-schema-compare-example</module>
     </modules>
 
     <properties>
@@ -41,7 +43,7 @@
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
                 <artifactId>elasticsearch-rest-high-level-client</artifactId>
-                <version>6.8.23</version>
+                <version>7.10.1</version>
             </dependency>
 
             <dependency>
