在pom.xml中添加Jackson注解依赖；更新README.md以反映支持POJO与数据库表结构比对的功能；在ColumnStructure中添加类型映射支持；优化ElasticsearchTableStructureExtractor以增强类型映射和错误处理；在TableStructureCompareServiceImpl中改进POJO与其他数据源的比对逻辑。

--- a/hds-schema-compare/pom.xml
+++ b/hds-schema-compare/pom.xml
@@ -92,5 +92,11 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Add Jackson dependency -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
