--- a/hds-schema-compare-example/src/main/resources/application.yml
+++ b/hds-schema-compare-example/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
       username: '4QSe7xb7fJajYDK.root'
       password: 'j4zBcHGXR2DKKliO'
       driver-class-name: com.mysql.cj.jdbc.Driver
+logging:
+  level:
+    root: INFO
+    org.wesuper.jtools: INFO
 jtools:
   hdscompare:
     elasticsearch:
@@ -53,7 +57,7 @@ jtools:
                 - "update_time"
               ignore-types:
                 - "COMMENT"
-                - "INDEX" 
+                - "INDEX"
         - name: "mysql-to-es-compare"
           source-data-source:
             type: "mysql"
@@ -76,7 +80,7 @@ jtools:
                 - "create_time"
                 - "update_time"
               ignore-types:
-                - "INDEX" 
+                - "INDEX"
         - name: "es-to-tidb-compare"
           source-data-source:
             type: "elasticsearch"
@@ -98,7 +102,7 @@ jtools:
                 - "create_time"
                 - "update_time"
               ignore-types:
-                - "INDEX" 
+                - "INDEX"
         - name: "es-to-mysql-compare"
           source-data-source:
             type: "elasticsearch"
@@ -120,7 +124,7 @@ jtools:
                 - "create_time"
                 - "update_time"
               ignore-types:
-                - "INDEX" 
+                - "INDEX"
         - name: "es-to-es-compare"
           source-data-source:
             type: "elasticsearch"
@@ -136,4 +140,188 @@ jtools:
                 - "update_time"
               ignore-types:
                 - "COMMENT"
-              
+        - name: "pojo-to-mysql-compare"
+          source-data-source:
+            type: "pojo"
+          target-data-source:
+            type: "mysql"
+            data-source-name: "mysqlDataSource"
+          table-configs:
+            - source-table-name: "org.wesuper.jtools.hdscompare.example.model.Fortune500"
+              target-table-name: "fortune500_2018_2022"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+            - source-table-name: "org.wesuper.jtools.hdscompare.example.model.Employee"
+              target-table-name: "employees"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+        - name: "mysql-to-pojo-compare"
+          source-data-source:
+            type: "mysql"
+            data-source-name: "mysqlDataSource"
+          target-data-source:
+            type: "pojo"
+          table-configs:
+            - source-table-name: "fortune500_2018_2022"
+              target-table-name: "org.wesuper.jtools.hdscompare.example.model.Fortune500"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+            - source-table-name: "employees"
+              target-table-name: "org.wesuper.jtools.hdscompare.example.model.Employee"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+        - name: "pojo-to-tidb-compare"
+          source-data-source:
+            type: "pojo"
+          target-data-source:
+            type: "tidb"
+            data-source-name: "tidbDataSource"
+          table-configs:
+            - source-table-name: "org.wesuper.jtools.hdscompare.example.model.Fortune500"
+              target-table-name: "fortune500_2018_2022"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+            - source-table-name: "org.wesuper.jtools.hdscompare.example.model.Employee"
+              target-table-name: "employees"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+        - name: "tidb-to-pojo-compare"
+          source-data-source:
+            type: "tidb"
+            data-source-name: "tidbDataSource"
+          target-data-source:
+            type: "pojo"
+          table-configs:
+            - source-table-name: "fortune500_2018_2022"
+              target-table-name: "org.wesuper.jtools.hdscompare.example.model.Fortune500"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+            - source-table-name: "employees"
+              target-table-name: "org.wesuper.jtools.hdscompare.example.model.Employee"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+        - name: "pojo-to-es-compare"
+          source-data-source:
+            type: "pojo"
+          target-data-source:
+            type: "elasticsearch"
+            data-source-name: "default_es"
+          table-configs:
+            - source-table-name: "org.wesuper.jtools.hdscompare.example.model.Fortune500"
+              target-table-name: "fortune500_2018_2022"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+            - source-table-name: "org.wesuper.jtools.hdscompare.example.model.Employee"
+              target-table-name: "employees"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+        - name: "es-to-pojo-compare"
+          source-data-source:
+            type: "elasticsearch"
+            data-source-name: "default_es"
+          target-data-source:
+            type: "pojo"
+          table-configs:
+            - source-table-name: "fortune500_2018_2022"
+              target-table-name: "org.wesuper.jtools.hdscompare.example.model.Fortune500"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+            - source-table-name: "employees"
+              target-table-name: "org.wesuper.jtools.hdscompare.example.model.Employee"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+        - name: "tidb-to-mysql-compare"
+          source-data-source:
+            type: "tidb"
+            data-source-name: "tidbDataSource"
+          target-data-source:
+            type: "mysql"
+            data-source-name: "mysqlDataSource"
+          table-configs:
+            - source-table-name: "fortune500_2018_2022"
+              target-table-name: "fortune500_2018_2022"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+            - source-table-name: "employees"
+              target-table-name: "employees"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+        - name: "tidb-to-es-compare"
+          source-data-source:
+            type: "tidb"
+            data-source-name: "tidbDataSource"
+          target-data-source:
+            type: "elasticsearch"
+            data-source-name: "default_es"
+          table-configs:
+            - source-table-name: "fortune500_2018_2022"
+              target-table-name: "fortune500_2018_2022"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "COMMENT"
+                - "INDEX"
+            - source-table-name: "employees"
+              target-table-name: "employees"
+              ignore-fields:
+                - "create_time"
+                - "update_time"
+              ignore-types:
+                - "INDEX" 
