--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
                 <artifactId>guava</artifactId>
                 <version>33.3.1-jre</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.15.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
