更新README.md以反映新增的Markdown输出功能和POJO支持；在DataSourceCompareConfig中添加外部YAML和JSON配置加载选项；在TableStructureCompareAutoStarter中实现Markdown报告生成；优化PojoTableStructureExtractor以引入缓存机制；重构TableStructureCompareServiceImpl以改进POJO与其他数据源的比对逻辑。

--- a/hds-schema-compare-example/src/main/resources/application.yml
+++ b/hds-schema-compare-example/src/main/resources/application.yml
@@ -33,6 +33,12 @@ jtools:
     config:
       auto-compare-on-startup: true
       verbose-output: true
+      enable-markdown-output: true
+      markdown-output-file-path: "compare-results-example.md"
+      load-from-external-yaml: false
+      external-yaml-config-file: "hdscompare-config-example.yml"
+      load-from-external-json: false
+      external-json-config-file: "hdscompare-config-example.json"
       compare-configs:
         - name: "mysql-to-tidb-compare"
           source-data-source:
